Use toList() instead of Collector