@@ -125,7 +125,7 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
         .<GraphQLRequestContext>getContext()
         .vehicleParkingService();
 
-      return vehicleParkingService.getBikeParks().collect(Collectors.toList());
+      return vehicleParkingService.getBikeParks().toList();
     };
   }
 
@@ -175,7 +175,7 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
           .getGraphQLIds()
           .stream()
           .flatMap(id -> vehicleRentalStations.get(id).stream())
-          .collect(Collectors.toList());
+          .toList();
       }
 
       return vehicleRentalStationService.getVehicleRentalPlaces();
@@ -222,11 +222,11 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
             .getCarParks()
             .collect(Collectors.toMap(station -> station.getId().getId(), station -> station));
 
-          return idList.stream().map(carParkMap::get).collect(Collectors.toList());
+          return idList.stream().map(carParkMap::get).toList();
         }
       }
 
-      return vehicleParkingService.getCarParks().collect(Collectors.toList());
+      return vehicleParkingService.getCarParks().toList();
     };
   }
 
@@ -321,7 +321,7 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
             }
           })
           .filter(Objects::nonNull)
-          .collect(Collectors.toList())
+          .toList()
         : null;
       List<PlaceType> filterByPlaceTypes = args.getGraphQLFilterByPlaceTypes() != null
         ? args.getGraphQLFilterByPlaceTypes().stream().map(GraphQLUtils::toModel).toList()
@@ -359,7 +359,7 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
       var args = new GraphQLTypes.GraphQLQueryTypeNodeArgs(environment.getArguments());
       String type = args.getGraphQLId().getType();
       String id = args.getGraphQLId().getId();
-      final GraphQLRequestContext context = environment.<GraphQLRequestContext>getContext();
+      final GraphQLRequestContext context = environment.getContext();
       TransitService transitService = context.transitService();
       VehicleParkingService vehicleParkingService = context.vehicleParkingService();
       VehicleRentalService vehicleRentalStationService = context.vehicleRentalService();
@@ -530,7 +530,7 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
           .getGraphQLIds()
           .stream()
           .flatMap(id -> vehicleRentalVehicles.get(id).stream())
-          .collect(Collectors.toList());
+          .toList();
       }
 
       var formFactorArgs = args.getGraphQLFormFactors();
@@ -573,7 +573,7 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
           .stream()
           .map(FeedScopedId::parse)
           .map(transitService::getRouteForId)
-          .collect(Collectors.toList());
+          .toList();
       }
 
       Stream<Route> routeStream = transitService.getAllRoutes().stream();
@@ -588,7 +588,7 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
           .getGraphQLTransportModes()
           .stream()
           .map(mode -> TransitMode.valueOf(mode.name()))
-          .collect(Collectors.toList());
+          .toList();
         routeStream = routeStream.filter(route -> modes.contains(route.getMode()));
       }
 
@@ -600,7 +600,7 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
             GraphQLUtils.startsWith(route.getLongName(), name, environment.getLocale())
           );
       }
-      return routeStream.collect(Collectors.toList());
+      return routeStream.toList();
     };
   }
 
@@ -783,7 +783,7 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
         tripStream = tripStream.filter(trip -> feeds.contains(trip.getId().getFeedId()));
       }
 
-      return tripStream.collect(Collectors.toList());
+      return tripStream.toList();
     };
   }
 
@@ -822,11 +822,11 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
             .getVehicleParkings()
             .collect(Collectors.toMap(station -> station.getId().toString(), station -> station));
 
-          return idList.stream().map(vehicleParkingMap::get).collect(Collectors.toList());
+          return idList.stream().map(vehicleParkingMap::get).toList();
         }
       }
 
-      return vehicleParkingService.getVehicleParkings().collect(Collectors.toList());
+      return vehicleParkingService.getVehicleParkings().toList();
     };
   }
 
@@ -878,7 +878,7 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
           .getGraphQLIds()
           .stream()
           .flatMap(id -> vehicleRentalStations.get(id).stream())
-          .collect(Collectors.toList());
+          .toList();
       }
 
       return vehicleRentalStationService.getVehicleRentalStations();
@@ -937,6 +937,6 @@ public class QueryTypeImpl implements GraphQLDataFetchers.GraphQLQueryType {
           .map(EntitySelector.Stop.class::cast)
           .anyMatch(stop -> args.getGraphQLStop().contains(stop.stopId().toString()))
       )
-      .collect(Collectors.toList());
+      .toList();
   }
 }
